add fitting by eigen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,13 @@ set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${PROJECT_SOURCE_DIR}/cmake")
 
 find_package(ALGLIB REQUIRED)
+find_package(Eigen3 REQUIRED)
 
-add_executable(curve_fitting
-    src/curve_fitting.cpp
+add_executable(curve_fitting_alglib
+    src/curve_fitting_alglib.cpp
     src/geometry_types.h
 )
-target_link_libraries(curve_fitting
+target_link_libraries(curve_fitting_alglib
     ${ALGLIB_LIBRARIES}
 )
 
@@ -22,4 +23,9 @@ add_executable(qp_demo
 )
 target_link_libraries(qp_demo
     ${ALGLIB_LIBRARIES}
+)
+
+add_executable(curve_fitting_eigen
+    src/curve_fitting_eigen.cpp
+    src/geometry_types.h
 )
