--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,3 +59,11 @@ add_executable(double_bi_search
 add_executable(second_short_path
     src/second_short_path.cpp
 )
+
+#add_executable(matrix
+#    src/matrix.cpp
+#)
+
+add_executable(iterate_tree_dfs
+    src/iterate_tree_dfs.cpp
+)
